Wed Mar 12 11:18:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_arg): turn a macro into an
	  inline function.

Wed Mar 12 07:26:05 2014  Eric Wong  <e@80x24.org>

	* insns.def (opt_regexpmatch2): respect redefined match op
	  Thanks to Sam Rawlins for the fix.
	* test/ruby/test_string.rb: test based on Tsuyoshi Sawada's report
	  [Bug #9581]

Tue Mar 11 22:31:25 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/.document: add objspace/objspace_dump.c to document file.

Tue Mar 11 22:22:38 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/objspace/test_objspace.rb (TestObjSpace#test_dump_uninitialized_file):
	  remove dependency on json library.

Tue Mar 11 10:55:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT{,.ja} (Appendix B): update contents of `ruby_options`
	  and replace `ruby_run` with `ruby_run_node`.  based on the patch
	  by Kaneko Yuichiro at [ruby-dev:48030] [Bug #9619].

Tue Mar 11 06:54:00 2014  Scott Francis  <scott.francis@shopify.com>

	* ext/objspace/objspace_dump.c: Check fptr before trying to dump RFILE
	  object fd. [GH-562]

	* test/objspace/test_objspace.rb: add test

Tue Mar 11 02:04:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_vm_bugreport): show vm maps on FreeBSD.

	* vm_dump.c (procstat_vm): copied from FreeBSD.
	  http://svnweb.freebsd.org/base/head/usr.bin/procstat/procstat_vm.c?revision=261780

Mon Mar 10 12:14:26 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: always check dladdr(1).

	* addr2line.c (fill_lines): show the line number in C backtrace if
	  ruby is built without --enable-shared (PIE) on Linux.
	  patch is originally by Shinichiro Hamaji
	  https://twitter.com/shinh/status/441957774264504321
	  NOTE: ld doesn't insert __executable_start for PIE.
	  dladdr(3)'s argument must be a function pointer.

Mon Mar 10 10:51:17 2014  ksss  <co000ri@gmail.com>

	* test/ruby/test_enumerator.rb (test_iterators): fix test for hash